Fix a bug
remove nav rail/bar extra padding when not present

--- a/node_js/material/layouts.css
+++ b/node_js/material/layouts.css
@@ -30,6 +30,10 @@ x-layout {
     padding-right: calc(var(--safe-area) - 100vw + 100%);
     width: calc(100% - 2 * var(--safe-area) - var(--rail-space) + 100vw - 100%);
 }
+x-layout:not([has-rail]) {
+    padding-left: var(--safe-area);
+    width: calc(100% - 2 * var(--safe-area) + 100vw - 100%);
+}
 
 x-layout > [slot=group] {
     --nav-width: 50px;
@@ -42,7 +46,8 @@ x-layout > [slot=group] {
     min-width: 0;
 }
 
-x-layout > :not([slot=group]) + [slot=group] {
+x-layout > :not([slot=group]) + [slot=group],
+x-layout > [slot=group]:first-child {
     margin-left:0;
 }
 
@@ -72,12 +77,15 @@ x-layout > [slot=nav-rail] {
         display: block;
     }
     x-layout {
-        width: calc(100% - 1 * var(--safe-area) - max(calc(var(--safe-area) - 100vw + 100%), var(--safe-area)));
+        width: calc(100% - 2 * var(--safe-area));
         padding-top: calc(var(--top-space) + var(--safe-area));
         padding-left: max(calc(var(--safe-area) - 100vw + 100%), var(--safe-area));
         padding-right: calc(min(calc(100vw - 100% - var(--safe-area)), 0px) + var(--safe-area));
-        /* I ain't touching this padding code ever again, neither should you.. */
+        /* ^^ THIS NEEDS TO BE FIXED!! ^^ */
         display: block;
+    }
+    x-layout:not([has-bar]) {
+        padding-top: var(--safe-area);
     }
     x-layout > [slot=group][style*=width],
     x-layout > [slot=group][view=static] {
@@ -114,6 +122,9 @@ x-layout > [slot=nav-rail] {
         padding-top: calc(var(--top-space) + var(--safe-area));
         padding-right: calc(var(--safe-area) - 100vw + 100%);
         padding-left: var(--safe-area);
+    }
+    x-layout:not([group-count='1']):not([view=collapse]):not([has-bar]) {
+        padding-top: var(--safe-area);
     }
     /* Switch to rail if view is set to collapse */
     x-layout[view=collapse] > [slot=nav-rail] {
